# azure-secure-microservice-blueprint

./: .env.example  README.md  docker-compose.yml
.github/workflows/: ci.yml
infra/terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
services/api/: Dockerfile  pyproject.toml
services/api/app/: config.py  database.py  logging_setup.py  main.py  messaging.py  schemas.py
services/api/tests/: test_api.py
services/worker/: Dockerfile  pyproject.toml
services/worker/app/: config.py  database.py  logging_setup.py  main.py  models.py
services/worker/tests/: test_worker.py
